Refactoring: Organize service.upnp.processor.composite
There are some areas where the division of responsibilities between
classes is unclear, so the following improvements will be made.

 - Add interface CompositeModel
 - Add FolderAlbum

Naming rules will be standardized according to the responsibilities of
the class.

 - Move GenreAndAlbum to GenreAlbum
 - Move FolderOrArtist to FolderOrFArtist
 - Move ArtistOrSong to FArtistOrSong
 - Move FolderOrAlbum to FolderOrFAlbum